--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@ body {
     <p>SpeechCraft AI helps people with speech disorders improve their communication through real-time feedback, personalized training, and gamified learning.</p>
     <div class="cta-buttons">
       <a href="tryit.html" class="primary-btn">Try It Now</a>
-      <a href="#" class="secondary-btn">Live Demo</a>
+      <a href="https://youtu.be/J1Doc6awR8M?si=xP1Zoa19V91XrDz8" class="secondary-btn">Live Demo</a>
     </div>
   </section>
 
